--- a/index.html
+++ b/index.html
@@ -99,69 +99,69 @@
         </nav>
         <!--
 
-        <section class="hero-section" id="2024">
-            <div class="section-overlay"></div>
+    <section class="hero-section" id="2024">
+        <div class="section-overlay"></div>
 
-            <div class="container d-flex justify-content-center align-items-center">
-                <div class="row">
+        <div class="container d-flex justify-content-center align-items-center">
+            <div class="row">
 
-                    <div class="col-12 mt-auto mb-5 text-center">
-                        <img src="./images/califamountainfestival-logo-color-150Ancho.png" alt="Califa Mountain Festival" />
-                        <h3 class="text-white mb-5">Campeonato de Andalucía de CxM por Etapas 2024 | Trofeo UCO</h3>
+                <div class="col-12 mt-auto mb-5 text-center">
+                    <img src="./images/califamountainfestival-logo-color-150Ancho.png" alt="Califa Mountain Festival" />
+                    <h3 class="text-white mb-5">Campeonato de Andalucía de CxM por Etapas 2024 | Trofeo UCO</h3>
 
-                        <a class="btn custom-btn smoothscroll" href="2024" target="_blank">INFORMACIÓN</a>
-                        <a class="btn custom-btn smoothscroll" href="2024#inscripciones" target="_blank">INSCRIPCIONES</a>
+                    <a class="btn custom-btn smoothscroll" href="2024" target="_blank">INFORMACIÓN</a>
+                    <a class="btn custom-btn smoothscroll" href="2024#inscripciones" target="_blank">INSCRIPCIONES</a>
+                </div>
+
+                <div class="col-lg-12 col-12 mt-auto d-flex flex-column flex-lg-row text-center">
+                    <div class="date-wrap">
+                        <h5 class="text-white">
+                            <i class="custom-icon bi-clock me-2"></i>
+                            20 - 22 SEP 2024
+                        </h5>
                     </div>
 
-                    <div class="col-lg-12 col-12 mt-auto d-flex flex-column flex-lg-row text-center">
-                        <div class="date-wrap">
-                            <h5 class="text-white">
-                                <i class="custom-icon bi-clock me-2"></i>
-                                20 - 22 SEP 2024
-                            </h5>
-                        </div>
+                    <div class="location-wrap mx-auto py-3 py-lg-0">
+                        <h5 class="text-white">
+                            <i class="custom-icon bi-geo-alt me-2"></i>
+                            Cerro Muriano, Córdoba
+                        </h5>
+                    </div>
 
-                        <div class="location-wrap mx-auto py-3 py-lg-0">
-                            <h5 class="text-white">
-                                <i class="custom-icon bi-geo-alt me-2"></i>
-                                Cerro Muriano, Córdoba
-                            </h5>
-                        </div>
+                    <div class="social-share">
+                        <ul class="social-icon d-flex align-items-center justify-content-center">
+                            <span class="text-white me-3">RRSS:</span>
+                            <li class="social-icon-item">
+                                <a href="https://www.facebook.com/profile.php?id=100078855293096" target="_blank" class="social-icon-link">
+                                    <span class="bi-facebook"></span>
+                                </a>
+                            </li>
 
-                        <div class="social-share">
-                            <ul class="social-icon d-flex align-items-center justify-content-center">
-                                <span class="text-white me-3">RRSS:</span>
-                                <li class="social-icon-item">
-                                    <a href="https://www.facebook.com/profile.php?id=100078855293096" target="_blank" class="social-icon-link">
-                                        <span class="bi-facebook"></span>
-                                    </a>
-                                </li>
+                            <li class="social-icon-item">
+                                <a href="https://www.instagram.com/califa_mountain_festival" target="_blank" class="social-icon-link">
+                                    <span class="bi-instagram"></span>
+                                </a>
+                            </li>
 
-                                <li class="social-icon-item">
-                                    <a href="https://www.instagram.com/califa_mountain_festival" target="_blank" class="social-icon-link">
-                                        <span class="bi-instagram"></span>
-                                    </a>
-                                </li>
-
-                                <li class="social-icon-item">
-                                    <a href="https://www.youtube.com/@runningseries" target="_blank" class="social-icon-link">
-                                        <span class="bi-youtube"></span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
+                            <li class="social-icon-item">
+                                <a href="https://www.youtube.com/@runningseries" target="_blank" class="social-icon-link">
+                                    <span class="bi-youtube"></span>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="video-wrap">
-                <video autoplay="" loop="" muted="" class="custom-video" poster="">
-                    <source src="video/intro.mp4" type="video/mp4">
-                    Tu navegador no acepta la reproducción de video MP4 HTML5
-                </video>
-            </div>
-        </section>
-            -->
+        <div class="video-wrap">
+            <video autoplay="" loop="" muted="" class="custom-video" poster="">
+                <source src="video/intro.mp4" type="video/mp4">
+                Tu navegador no acepta la reproducción de video MP4 HTML5
+            </video>
+        </div>
+    </section>
+        -->
         <section class="about-section section-padding" id="gap">
             <div class="container">
                 <div class="row">
@@ -180,6 +180,23 @@
                     <a href="2024/salida-etapa3.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">HORARIO SALIDA ETAPA 3</a>
                     <a href="https://www.dropbox.com/scl/fi/d27ttyqlep39vhriywh91/CALIFA_MOUNTAIN_FESTIVAL_ETAPA3.pdf?rlkey=8q46dvmmu9o75lyfztf6et7o1&e=1&dl=0" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 - PROVISIONALES</a>
                     <a href="https://www.dropbox.com/scl/fi/0t0wr4e6hec7bisd82gyu/CALIFA_GENERAL_PROVISIONAL.pdf?rlkey=6woelbebt3088ut54d0v10oby&dl=0" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">GENERAL 3 ETAPAS - PROVISIONALES</a>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="about-section section-padding" id="fotos">
+            <div class="card margin-bottom-20px red-custom-bg border-none">
+                <div class="card-body">
+                    <h5 class="card-title text-white">ETAPA 2</h5>
+                    <a href="https://www.facebook.com/media/set/?vanity=aristarun&set=a.1105852704345089" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 ARISTARUN</a>
+                </div>
+            </div>
+            <div class="card margin-bottom-20px red-custom-bg border-none">
+                <div class="card-body">
+                    <h5 class="card-title text-white">ETAPA 3</h5>
+                    <a href="https://www.facebook.com/media/set/?vanity=aristarun&set=a.1106669170930109" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 ARISTARUN</a>
+                    <a href="https://photos.app.goo.gl/Pm5So35Dr3McCEKu8" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 A.GARRIGUET</a>
 
                 </div>
             </div>
