--- a/index.html
+++ b/index.html
@@ -162,14 +162,6 @@
         </div>
     </section>
         -->
-        <section class="about-section section-padding" id="gap">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                    </div>
-                </div>
-            </div>
-        </section>
 
         <section class="about-section section-padding" id="resultados">
             <div class="card margin-bottom-20px red-custom-bg border-none">
@@ -188,13 +180,13 @@
         <section class="about-section section-padding" id="fotos">
             <div class="card margin-bottom-20px red-custom-bg border-none">
                 <div class="card-body">
-                    <h5 class="card-title text-white">ETAPA 2</h5>
+                    <h5 class="card-title text-white">FOTOS ETAPA 2</h5>
                     <a href="https://www.facebook.com/media/set/?vanity=aristarun&set=a.1105852704345089" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 ARISTARUN</a>
                 </div>
             </div>
             <div class="card margin-bottom-20px red-custom-bg border-none">
                 <div class="card-body">
-                    <h5 class="card-title text-white">ETAPA 3</h5>
+                    <h5 class="card-title text-white">FOTOS ETAPA 3</h5>
                     <a href="https://www.facebook.com/media/set/?vanity=aristarun&set=a.1106669170930109" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 ARISTARUN</a>
                     <a href="https://photos.app.goo.gl/Pm5So35Dr3McCEKu8" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 A.GARRIGUET</a>
 
