--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@
                 <div class="card-body">
                     <h5 class="card-title text-white">FOTOS ETAPA 2</h5>
                     <a href="https://www.facebook.com/media/set/?vanity=aristarun&set=a.1105852704345089" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 ARISTARUN</a>
+                    <a href="https://photos.app.goo.gl/q6zJJifZhHY7tiRP9" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 A. RIOS</a>
+
+                    
                 </div>
             </div>
             <div class="card margin-bottom-20px red-custom-bg border-none">
