--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
                     <h5 class="card-title text-white">FOTOS ETAPA 3</h5>
                     <a href="https://www.facebook.com/media/set/?vanity=aristarun&set=a.1106669170930109" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 ARISTARUN</a>
                     <a href="https://photos.app.goo.gl/Pm5So35Dr3McCEKu8" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 A.GARRIGUET</a>
+                    <a href="https://cordopolis.eldiario.es/deportes/atletismo/iii-califa-mountain-festival-vuelve-brillar-cerro-muriano_3_11672595.html" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 CORDÓPOLIS</a>
 
                 </div>
             </div>
