--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <a href="https://www.facebook.com/media/set/?vanity=aristarun&set=a.1105852704345089" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 ARISTARUN</a>
                     <a href="https://photos.app.goo.gl/q6zJJifZhHY7tiRP9" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 A. RIOS</a>
 
-                    
+
                 </div>
             </div>
             <div class="card margin-bottom-20px red-custom-bg border-none">
@@ -194,6 +194,13 @@
                     <a href="https://photos.app.goo.gl/Pm5So35Dr3McCEKu8" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 A.GARRIGUET</a>
                     <a href="https://cordopolis.eldiario.es/deportes/atletismo/iii-califa-mountain-festival-vuelve-brillar-cerro-muriano_3_11672595.html" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 CORDÓPOLIS</a>
 
+                </div>
+            </div>
+            <div class="card margin-bottom-20px red-custom-bg border-none">
+                <div class="card-body">
+                    <h5 class="card-title text-white">FOTOS SENDERISMO</h5>
+                    <a href="https://www.facebook.com/media/set/?vanity=FERNANDODELPEDROSO&set=a.8231887670222324" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">SENDERISMO FERNANDO MORENO GÓMEZ</a>
+                    <a href="https://photos.google.com/share/AF1QipPE68xM_DmriVbAC_ClYsoaAX0Mnc768YtyUIPu1oTzOyH6aY78_ndimLyOipq-cQ?key=YzByaElWWDZLbnNOR1VWd08yUDgzeTV6Z1d2TXFB" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">SENDERISMO JOSE MIGUEL GUERRERO</a>
                 </div>
             </div>
         </section>
