--- a/index.html
+++ b/index.html
@@ -167,11 +167,10 @@
             <div class="card margin-bottom-20px red-custom-bg border-none">
                 <div class="card-body">
                     <h5 class="card-title text-white">RESULTADOS</h5>
-                    <a id="resultados-1" href="2024/resultados-etapa1.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 1</a>
-                    <a href="https://www.dropbox.com/scl/fi/sj9ndqrubzy2qtc4hpbn0/CALIFA_ETAPA2.csv?rlkey=g1tusfareyxa7eugcy54prfiv&dl=0" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 - PROVISIONALES</a>
-                    <a href="2024/salida-etapa3.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">HORARIO SALIDA ETAPA 3</a>
-                    <a href="https://www.dropbox.com/scl/fi/d27ttyqlep39vhriywh91/CALIFA_MOUNTAIN_FESTIVAL_ETAPA3.pdf?rlkey=8q46dvmmu9o75lyfztf6et7o1&e=1&dl=0" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 - PROVISIONALES</a>
-                    <a href="https://www.dropbox.com/scl/fi/0t0wr4e6hec7bisd82gyu/CALIFA_GENERAL_PROVISIONAL.pdf?rlkey=6woelbebt3088ut54d0v10oby&dl=0" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">GENERAL 3 ETAPAS - PROVISIONALES</a>
+                    <a href="2024/resultados-etapa1.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS ETAPA 1</a>
+                    <a href="2024/resultados-etapa2.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS ETAPA 2</a>
+                    <a href="2024/resultados-etapa3.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS ETAPA 3</a>
+                    <a href="2024/resultados-califamountainfestival3etapas.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS 3*ETAPAS</a>
 
                 </div>
             </div>
@@ -191,6 +190,7 @@
                     <a href="https://www.facebook.com/media/set/?vanity=aristarun&set=a.1105852704345089" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 ARISTARUN</a>
                     <a href="https://photos.app.goo.gl/q6zJJifZhHY7tiRP9" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 A. RIOS</a>
                     <a href="https://photos.google.com/share/AF1QipO0gdeLXPWlEUebja5sU4WcOZeHDqh2tY2lf6ESuJRFIL_77ggruL458XQfCNZqxQ?key=c2p3SzZZZEN0UHB5RDVFeGwzeVhpVDBuUFRfdnJR" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 MASATLETISMO</a>
+                    <a href="https://photos.app.goo.gl/gge9mJvmh4yr9sbc7" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 RAFA MADUEÑO</a>
 
                 </div>
             </div>
