--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                     <a href="2024/resultados-etapa2.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS ETAPA 2</a>
                     <a href="2024/resultados-etapa3.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS ETAPA 3</a>
                     <a href="2024/resultados-califamountainfestival3etapas.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS 3*ETAPAS</a>
+                    <a href="2024/resultados-ctoandalucia.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS CAMPEONATO ANDALUCÍA</a>
 
                 </div>
             </div>
@@ -191,6 +192,7 @@
                     <a href="https://photos.app.goo.gl/q6zJJifZhHY7tiRP9" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 A. RIOS</a>
                     <a href="https://photos.google.com/share/AF1QipO0gdeLXPWlEUebja5sU4WcOZeHDqh2tY2lf6ESuJRFIL_77ggruL458XQfCNZqxQ?key=c2p3SzZZZEN0UHB5RDVFeGwzeVhpVDBuUFRfdnJR" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 MASATLETISMO</a>
                     <a href="https://photos.app.goo.gl/gge9mJvmh4yr9sbc7" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 RAFA MADUEÑO</a>
+                    <a href="https://photos.app.goo.gl/nQ1Js68xiVF1wFsM7" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 CARMEN LÓPEZ</a>
 
                 </div>
             </div>
