--- a/index.html
+++ b/index.html
@@ -175,6 +175,12 @@
 
                 </div>
             </div>
+            <div class="card margin-bottom-20px red-custom-bg border-none">
+                <div class="card-body">
+                    <h5 class="card-title text-white">DIPLOMAS 3*ETAPAS FINISHER</h5>
+                    <a href="2024/diplomas.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DIPLOMAS 3*ETAPAS FINISHER</a>
+                </div>
+            </div>
         </section>
 
         <section class="about-section section-padding" id="fotos">
