--- a/index.html
+++ b/index.html
@@ -172,13 +172,18 @@
                     <a href="2024/resultados-etapa3.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">PODIUMS ETAPA 3</a>
                     <a href="2024/resultados-califamountainfestival3etapas.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">PODIUMS 3*ETAPAS</a>
                     <a href="2024/resultados-ctoandalucia.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">PODIUMS CAMPEONATO ANDALUCÍA</a>
+                    <a href="2024/resultados-uco-etapa2.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">PODIUMS TROFEO CxM UCO</a>
+
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title text-white">POR CATEGORÍAS</h5>
-                    <a href="2024/resultados-categorias-etapa1.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS CATEGORIAS ETAPA 1</a>
-                    <a href="2024/resultados-categorias-etapa2.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS CATEGORIAS ETAPA 2</a>
-                    <a href="2024/resultados-categorias-etapa3.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS CATEGORIAS ETAPA 3</a>
-                    <a href="2024/resultados-categorias-califamountainfestival3etapas.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS CATEGORIAS 3*ETAPAS</a>
+                    <h5 class="card-title text-white">RESULTADOS</h5>
+                    <a href="2024/resultados-general-etapa1.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS ETAPA 1</a>
+                    <a href="2024/resultados-general-etapa2.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS ETAPA 2</a>
+                    <a href="2024/resultados-general-etapa3.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS ETAPA 3</a>
+                    <a href="2024/resultados-general-califamountainfestival3etapas.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS 3*ETAPAS</a>
+                    <a href="2024/resultados-general-ctoAndalucia.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS CAMPEONATO ANDALUCIA</a>
+                    <a href="2024/resultados-uco-etapa2.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">PODIUMS TROFEO CxM UCO</a>
+
                 </div>
             </div>
             <div class="card margin-bottom-20px red-custom-bg border-none" id="diplomas">
