--- a/index.html
+++ b/index.html
@@ -219,6 +219,9 @@
                     <a href="https://photos.google.com/share/AF1QipO0gdeLXPWlEUebja5sU4WcOZeHDqh2tY2lf6ESuJRFIL_77ggruL458XQfCNZqxQ?key=c2p3SzZZZEN0UHB5RDVFeGwzeVhpVDBuUFRfdnJR" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 MASATLETISMO</a>
                     <a href="https://photos.app.goo.gl/gge9mJvmh4yr9sbc7" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 RAFA MADUEÑO</a>
                     <a href="https://photos.app.goo.gl/nQ1Js68xiVF1wFsM7" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 CARMEN LÓPEZ</a>
+                    <a href="https://photos.app.goo.gl/xyemTNsEHn1pSAQt8" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 ALBERTO ALCÁNTARA EN TORREÁRBOLES</a>
+                    <a href="https://photos.app.goo.gl/EN3xdV87yooRarV77" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 ALBERTO ALCÁNTARA EN ARRASTRACULOS</a>
+                    <a href="https://photos.app.goo.gl/Ao2ttQ93k7gfX76J6" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 ALBERTO ALCÁNTARA POST META</a>
 
                 </div>
             </div>
@@ -229,6 +232,8 @@
                     <a href="https://photos.app.goo.gl/Pm5So35Dr3McCEKu8" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 A.GARRIGUET</a>
                     <a href="https://cordopolis.eldiario.es/deportes/atletismo/iii-califa-mountain-festival-vuelve-brillar-cerro-muriano_3_11672595.html" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 CORDÓPOLIS</a>
                     <a href="https://photos.google.com/share/AF1QipNzpC_qUUjDDBW6IGTORfgFWLbG9M0jmlUcQxng2HW6XBwR-YApDC3dDVJ3FYYVgA?key=dmRmdENSdVpBMm9ONTRaQjBDMnkxWjJ4cGNSMGZB" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 MASATLETISMO</a>
+                    <a href="https://photos.app.goo.gl/2duTjYRf2ajvmynj8" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 ALBERTO ALCÁNTARA</a>
+                    <a href="https://photos.app.goo.gl/uzpzH4DWXBeZyne18" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 3 ALBERTO ALCÁNTARA - GALA FINAL</a>
 
                 </div>
             </div>
@@ -237,6 +242,8 @@
                     <h5 class="card-title text-white">FOTOS SENDERISMO</h5>
                     <a href="https://www.facebook.com/media/set/?vanity=FERNANDODELPEDROSO&set=a.8231887670222324" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">SENDERISMO FERNANDO MORENO GÓMEZ</a>
                     <a href="https://photos.google.com/share/AF1QipPE68xM_DmriVbAC_ClYsoaAX0Mnc768YtyUIPu1oTzOyH6aY78_ndimLyOipq-cQ?key=YzByaElWWDZLbnNOR1VWd08yUDgzeTV6Z1d2TXFB" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">SENDERISMO JOSE MIGUEL GUERRERO</a>
+                    <a href="https://photos.app.goo.gl/N47jHzvr6X5mL2Nt9" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">SENDERISMO ALBERTO ALCÁNTARA EN VIRGENCITA</a>
+
                 </div>
             </div>
             <div class="card margin-bottom-20px red-custom-bg border-none">
