--- a/index.html
+++ b/index.html
@@ -163,6 +163,43 @@
     </section>
         -->
 
+        <section class="about-section section-padding" id="quedadabrooks">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="mb-lg-0 text-yellow-dark-custom">ENCUESTA 2024</h2>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://forms.gle/nDV6UcC9owo3HrqC8" target="_blank"><img src="./2024/encuesta.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-9">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body">
+                                <div class="text-yellow-dark-custom">
+                                    AYÚDANOS A MEJORAR Y PARTICIPA EN EL SORTEO !
+                                </div><div class="text-yellow-dark-custom">
+                                </div><span>.</span><div class="text-yellow-dark-custom">
+                                    Hasta viernes 27 de septiembre 2024 a las 14:00
+                                </div><div class="text-yellow-dark-custom">
+                                </div><span>.</span><div class="text-yellow-dark-custom">
+
+                                    2 inscripciones para Califa Mountain Festival 2025
+                                </div><div class="text-yellow-dark-custom">
+                                    1 pack material Califa Mountain Festival 2024
+                                </div><div class="text-yellow-dark-custom">
+                                </div><div class="text-yellow-dark-custom">
+                                </div><span>.</span><div class="text-yellow-dark-custom">
+                                </div><span>.</span><div class="text-yellow-dark-custom">
+                                    <div class="col-12">
+                                        <a href="https://forms.gle/nDV6UcC9owo3HrqC8" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">COMPLETA aquí</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+
         <section class="about-section section-padding" id="resultados">
             <div class="card margin-bottom-20px red-custom-bg border-none">
                 <div class="card-body">
@@ -257,6 +294,9 @@
                 </div>
             </div>
         </section>
+
+
+
 
         <section class="about-section section-padding" id="inscripciones">
             <div class="card margin-bottom-20px red-custom-bg border-none">
