--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
                     <a href="https://photos.app.goo.gl/xyemTNsEHn1pSAQt8" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 ALBERTO ALCÁNTARA EN TORREÁRBOLES</a>
                     <a href="https://photos.app.goo.gl/EN3xdV87yooRarV77" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 ALBERTO ALCÁNTARA EN ARRASTRACULOS</a>
                     <a href="https://photos.app.goo.gl/Ao2ttQ93k7gfX76J6" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 ALBERTO ALCÁNTARA POST META</a>
+                    <a href="https://photos.app.goo.gl/ejDkRZuAn9hpu9aQ7" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ETAPA 2 META VOLANTE LUIS AMORES HIJO</a>
 
                 </div>
             </div>
