--- a/2022.html
+++ b/2022.html
@@ -522,7 +522,7 @@
                         <a href="https://gruposercolu.com/" target="_blank"><img src="./images/sercolu-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
-                        <a href="https://lavanderiaposadas.es/servicio-alquiler-renting-textil/" target="_blank"><img src="./images/rentingtextil-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        <a href="https://lavanderiaposadas.es" target="_blank"><img src="./images/rentingtextil-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
                         <a href="https://www.instagram.com/latrastiendadelsur" target="_blank"><img src="./images/trastiendasur-logo-blanco.png" style="width:100%; height: auto" /></a>
