--- a/index.html
+++ b/index.html
@@ -99,108 +99,90 @@
         </nav>
         <!--
 
-    <section class="hero-section" id="2024">
-        <div class="section-overlay"></div>
+        <section class="hero-section" id="2024">
+            <div class="section-overlay"></div>
 
-        <div class="container d-flex justify-content-center align-items-center">
-            <div class="row">
+            <div class="container d-flex justify-content-center align-items-center">
+                <div class="row">
 
-                <div class="col-12 mt-auto mb-5 text-center">
-                    <img src="./images/califamountainfestival-logo-color-150Ancho.png" alt="Califa Mountain Festival" />
-                    <h3 class="text-white mb-5">Campeonato de Andalucía de CxM por Etapas 2024 | Trofeo UCO</h3>
+                    <div class="col-12 mt-auto mb-5 text-center">
+                        <img src="./images/califamountainfestival-logo-color-150Ancho.png" alt="Califa Mountain Festival" />
+                        <h3 class="text-white mb-5">Campeonato de Andalucía de CxM por Etapas 2024 | Trofeo UCO</h3>
 
-                    <a class="btn custom-btn smoothscroll" href="2024" target="_blank">INFORMACIÓN</a>
-                    <a class="btn custom-btn smoothscroll" href="2024#inscripciones" target="_blank">INSCRIPCIONES</a>
-                </div>
-
-                <div class="col-lg-12 col-12 mt-auto d-flex flex-column flex-lg-row text-center">
-                    <div class="date-wrap">
-                        <h5 class="text-white">
-                            <i class="custom-icon bi-clock me-2"></i>
-                            20 - 22 SEP 2024
-                        </h5>
+                        <a class="btn custom-btn smoothscroll" href="2024" target="_blank">INFORMACIÓN</a>
+                        <a class="btn custom-btn smoothscroll" href="2024#inscripciones" target="_blank">INSCRIPCIONES</a>
                     </div>
 
-                    <div class="location-wrap mx-auto py-3 py-lg-0">
-                        <h5 class="text-white">
-                            <i class="custom-icon bi-geo-alt me-2"></i>
-                            Cerro Muriano, Córdoba
-                        </h5>
-                    </div>
+                    <div class="col-lg-12 col-12 mt-auto d-flex flex-column flex-lg-row text-center">
+                        <div class="date-wrap">
+                            <h5 class="text-white">
+                                <i class="custom-icon bi-clock me-2"></i>
+                                20 - 22 SEP 2024
+                            </h5>
+                        </div>
 
-                    <div class="social-share">
-                        <ul class="social-icon d-flex align-items-center justify-content-center">
-                            <span class="text-white me-3">RRSS:</span>
-                            <li class="social-icon-item">
-                                <a href="https://www.facebook.com/profile.php?id=100078855293096" target="_blank" class="social-icon-link">
-                                    <span class="bi-facebook"></span>
-                                </a>
-                            </li>
+                        <div class="location-wrap mx-auto py-3 py-lg-0">
+                            <h5 class="text-white">
+                                <i class="custom-icon bi-geo-alt me-2"></i>
+                                Cerro Muriano, Córdoba
+                            </h5>
+                        </div>
 
-                            <li class="social-icon-item">
-                                <a href="https://www.instagram.com/califa_mountain_festival" target="_blank" class="social-icon-link">
-                                    <span class="bi-instagram"></span>
-                                </a>
-                            </li>
+                        <div class="social-share">
+                            <ul class="social-icon d-flex align-items-center justify-content-center">
+                                <span class="text-white me-3">RRSS:</span>
+                                <li class="social-icon-item">
+                                    <a href="https://www.facebook.com/profile.php?id=100078855293096" target="_blank" class="social-icon-link">
+                                        <span class="bi-facebook"></span>
+                                    </a>
+                                </li>
 
-                            <li class="social-icon-item">
-                                <a href="https://www.youtube.com/@runningseries" target="_blank" class="social-icon-link">
-                                    <span class="bi-youtube"></span>
-                                </a>
-                            </li>
-                        </ul>
+                                <li class="social-icon-item">
+                                    <a href="https://www.instagram.com/califa_mountain_festival" target="_blank" class="social-icon-link">
+                                        <span class="bi-instagram"></span>
+                                    </a>
+                                </li>
+
+                                <li class="social-icon-item">
+                                    <a href="https://www.youtube.com/@runningseries" target="_blank" class="social-icon-link">
+                                        <span class="bi-youtube"></span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="video-wrap">
-            <video autoplay="" loop="" muted="" class="custom-video" poster="">
-                <source src="video/intro.mp4" type="video/mp4">
-                Tu navegador no acepta la reproducción de video MP4 HTML5
-            </video>
-        </div>
-    </section>
-        -->
+            <div class="video-wrap">
+                <video autoplay="" loop="" muted="" class="custom-video" poster="">
+                    <source src="video/intro.mp4" type="video/mp4">
+                    Tu navegador no acepta la reproducción de video MP4 HTML5
+                </video>
+            </div>
+        </section>
+            -->
 
-        <section class="about-section section-padding" id="quedadabrooks">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <h2 class="mb-lg-0 text-yellow-dark-custom">ENCUESTA 2024</h2>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://forms.gle/nDV6UcC9owo3HrqC8" target="_blank"><img src="./2024/encuesta.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-9">
-                        <div class="card margin-bottom-20px blue-custom-bg border-none">
-                            <div class="card-body">
-                                <div class="text-yellow-dark-custom">
-                                    AYÚDANOS A MEJORAR Y PARTICIPA EN EL SORTEO !
-                                </div><div class="text-yellow-dark-custom">
-                                </div><span>.</span><div class="text-yellow-dark-custom">
-                                    Hasta viernes 27 de septiembre 2024 a las 14:00
-                                </div><div class="text-yellow-dark-custom">
-                                </div><span>.</span><div class="text-yellow-dark-custom">
-
-                                    2 inscripciones para Califa Mountain Festival 2025
-                                </div><div class="text-yellow-dark-custom">
-                                    1 pack material Califa Mountain Festival 2024
-                                </div><div class="text-yellow-dark-custom">
-                                </div><div class="text-yellow-dark-custom">
-                                </div><span>.</span><div class="text-yellow-dark-custom">
-                                </div><span>.</span><div class="text-yellow-dark-custom">
-                                    <div class="col-12">
-                                        <a href="https://forms.gle/nDV6UcC9owo3HrqC8" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">COMPLETA aquí</a>
-                                    </div>
+        <section class="about-section section-padding" id="resultados">
+            <!-- VIDEOS -->
+            <div class="col-lg-12 col-12">
+                <div class="card margin-bottom-20px blue-custom-bg border-none">
+                    <div class="card-body">
+                        <h5 class="card-title text-white" id="videos"><i class="bi bi-camera-reels-fill"></i>ESTO FUE III CALIFA MOUNTAIN FESTIVAL ¡ GRACIAS ! </h5>
+                        <div class="col-lg-12 col-12">
+                            <div class="card margin-bottom-20px red-custom-bg">
+                                <div class="card-body">
+                                    <h5 class="card-title text-blue-custom">Resumen III Califa Mountain Festival</h5>
+                                    <p class="text-white">Revive III Califa Mountain Festival 2024 en este Video Resumen</p>
+                                    <iframe class="iframe-custom" src="https://www.youtube.com/embed/rYZSClbsP8g" title="III Califa Mountain Festival 2024 RESUMEN" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-        </section>
+            </div>
 
-        <section class="about-section section-padding" id="resultados">
+
             <div class="card margin-bottom-20px red-custom-bg border-none">
                 <div class="card-body">
                     <h5 class="card-title text-white">PODIUMS</h5>
@@ -902,7 +884,7 @@
                         <a href="https://gruposercolu.com/" target="_blank"><img src="./images/sercolu-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
-                        <a href="https://lavanderiaposadas.es/servicio-alquiler-renting-textil/" target="_blank"><img src="./images/rentingtextil-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        <a href="https://lavanderiaposadas.es" target="_blank"><img src="./images/rentingtextil-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
                         <a href="https://www.instagram.com/latrastiendadelsur" target="_blank"><img src="./images/trastiendasur-logo-blanco.png" style="width:100%; height: auto" /></a>
