--- a/impacto.html
+++ b/impacto.html
@@ -119,7 +119,7 @@
                             </div>
                             <div class="card-body">
                                 <span class="text-yellow-dark-custom">
-                                    <a href="2024/informe-impacto-economico-califa-mountain-festival-24" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">VER INFORME</a>
+                                    <a href="2024/informe-impacto-economico-califa-mountain-festival-24.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">VER INFORME</a>
 
                                 </span>
                             </div>
