--- a/2024.html
+++ b/2024.html
@@ -708,14 +708,14 @@
             <div class="row">
 
                 <div class="col-12">
-                    <h2 class="mb-lg-0 text-yellow-dark-custom">Patrocinadores Principales 2024</h2>
+                    <h2 class="mb-lg-0 text-yellow-dark-custom">Patrocinadores Principales 2025</h2>
                 </div>
                 <div class="row">
                     <div class="col-4">
                         <a href="https://www.spg-pack.com/" target="_blank"><img src="./images/spg-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-4">
-                        <a href="https://www.innovaocular.com/" target="_blank"><img src="./images/innovaocular-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        <a href="https://studio128k.com/" target="_blank"><img src="./images/logo_128k_blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-4">
                         <a href="https://superatesports.es/" target="_blank"><img src="./images/superate-logo-blanco.png" style="width:100%; height: auto" /></a>
@@ -725,7 +725,7 @@
 
             <div class="row">
                 <div class="col-12">
-                    <h2 class="mb-lg-0 text-yellow-dark-custom">Partners Institucionales 2024</h2>
+                    <h2 class="mb-lg-0 text-yellow-dark-custom">Partners Institucionales 2025</h2>
                 </div>
                 <div class="row">
                     <div class="col-3">
@@ -749,164 +749,27 @@
                     <div class="col-3">
                         <a href="https://andalusiancrush.org?utm_source=cdrunningseries&utm_medium=web&utm_campaign=patrociniocalifamountainfestival2024&utm_content=logotipoweb" target="_blank"><img src="./images/junta-logo-blanco.png" style="width:100%; height: auto" /><img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361136&" width="1" height="1"><img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361136&" width="1" height="1"></a>
                     </div>
-                    <div class="col-3">
-                        <a href="https://tdahcordoba.es/" target="_blank"><img src="./images/tdah-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-5">
-                    </div>
                     <div class="col-2">
                         <a href="https://www.ajeandalucia.org/cordoba/" target="_blank"><img src="./images/aje-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-5">
                     </div>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-12">
-                    <h3 class="mb-lg-0 text-yellow-dark-custom">Patrocinadores 2024</h3>
+                    <h3 class="mb-lg-0 text-yellow-dark-custom">Patrocinadores 2025</h3>
                 </div>
                 <div class="row">
-                    <div class="col-3">
-                        <a href="https://www.facebook.com/p/Grupo-Corpodat-SPM-100063693216622/?locale=es_ES" target="_blank"><img src="./images/spmcorpodat-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="#" target="_blank"><img src="./images/spmtecnica-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://soulmedical.es/" target="_blank"><img src="./images/soulmedical-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://puntotramite.es/" target="_blank"><img src="./images/puntotramite-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://www.gruposancristobal.es/" target="_blank"><img src="./images/sancristobal-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://www.tradiscor.com/" target="_blank"><img src="./images/tradiscor-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://saile.es/" target="_blank"><img src="./images/saile-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://www.tysa.es/" target="_blank"><img src="./images/tysa-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://www.sadeco.es/" target="_blank"><img src="./images/sadeco-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://www.playerfactory.es/" target="_blank"><img src="./images/playerfactory-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
                     <div class="col-3">
                         <a href="https://www.mercadovictoria.com/" target="_blank"><img src="./images/mercadovictoria-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="row">
-                    <div class="col-2">
-                        <a href="https://arimaquinaria.com/" target="_blank"><img src="./images/ari-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://mamcordoba.com/" target="_blank"><img src="./images/mam-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
+                    <div class="col-3">
                         <a href="https://www.trefiladosurbano.com/" target="_blank"><img src="./images/trefiladosurbano-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://gallarcres.com/" target="_blank"><img src="./images/gallarcres-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://aflamencar.com/" target="_blank"><img src="./images/aflamencar-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://canoliva.com/" target="_blank"><img src="./images/canoliva-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://romafisioterapia.com/" target="_blank"><img src="./images/romafisioterapia-logo-blanco.PNG" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://casaruralelolmo.com/" target="_blank"><img src="./images/carusihome-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://www.sanalemo.es/" target="_blank"><img src="./images/sanalemo-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://supramar.es/" target="_blank"><img src="./images/supramar-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://elictem.com/" target="_blank"><img src="./images/elictem-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <h5 class="mb-lg-0 text-yellow-dark-custom">Colaboradores 2024</h5>
-                </div>
-                <div class="row">
-                    <div class="col-2">
-                        <a href="https://hotelabadi.com/" target="_blank"><img src="./images/abadi-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://www.emacsa.es/" target="_blank"><img src="./images/emacsa-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://wininnovacion.com/" target="_blank"><img src="./images/wininnovacion-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://golfcordoba.com/" target="_blank"><img src="./images/golf-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://www.facebook.com/DeportesFernandoPinedaRunning/?locale=es_ES" target="_blank"><img src="./images/fernandopineda-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://www.nutridamente.com/" target="_blank"><img src="./images/nutridamente-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://abogados-en-cordoba.es/" target="_blank"><img src="./images/kelsen-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://www.facebook.com/restaurantebarequis" target="_blank"><img src="./images/equis-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://semillassilvestres.com/" target="_blank"><img src="./images/semillassilvestres-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://saltamontes.net/" target="_blank"><img src="./images/saltamontes-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://aristarun.es/" target="_blank"><img src="./images/aristarun-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://eosiberica.es/" target="_blank"><img src="./images/eosiberica-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://fotoregalopersonalizado.es/" target="_blank"><img src="./images/fotoregalo-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://gruposercolu.com/" target="_blank"><img src="./images/sercolu-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://lavanderiaposadas.es" target="_blank"><img src="./images/rentingtextil-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://www.instagram.com/latrastiendadelsur" target="_blank"><img src="./images/trastiendasur-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://mcdonalds.es/" target="_blank"><img src="./images/mcdonald-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://www.instagram.com/farmacialosjardines/?hl=es" target="_blank"><img src="./images/farmaciajardines-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://teamergy.es/" target="_blank"><img src="./images/teamergy-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://www.helvetia.es/" target="_blank"><img src="./images/helvetia-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                 </div>
             </div>
         </div>
+
         <div class="container blue-custom-bg">
             <div class="row">
                 <div class="col-12">
@@ -930,6 +793,7 @@
         </div>
     </footer>
     <!--
+
 
     T e m p l a t e M o
 
