--- a/index.html
+++ b/index.html
@@ -268,9 +268,13 @@
                     <div class="col-3">
                         <a href="https://www.mercadovictoria.com/" target="_blank"><img src="./images/mercadovictoria-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
+                    <div class="col-3">
+                        <a href="https://www.trefiladosurbano.com/" target="_blank"><img src="./images/trefiladosurbano-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
                 </div>
             </div>
         </div>
+
         <div class="container blue-custom-bg">
             <div class="row">
                 <div class="col-12">
